<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CollabParking</string>

    <string-array name="menu_list">
        <item>Login</item>
        <item>Find Parking</item>
        <item>Crowd Contributor</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <!-- Facebook app id comes below -->
    <string name="facebook_app_id">1575303699358161</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_notification_pop_up">"CollabParking "</string>
    <string name="title_activity_map_marker">MapMarkerActivity</string>
    <string name="capacity_label">Capacity:  </string>
    <string name="capacity_value">N/A</string>
    <string name="price_per_hour_label">Price per hour:  </string>
    <string name="price_per_hour_value">N/A</string>
    <string name="price_per_day_label">Price per day:  </string>
    <string name="price_per_day_value">N/A</string>
    <string name="title_activity_solution_popup">Collabparking- Survey  Result</string>
    <string name="title_activity_edit_parking_lot">EditParkingLot</string>

</resources>
