<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="200dp"

    android:paddingLeft="35dp"
    android:paddingRight="50dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context="edu.usc.bphilip.collabparking.MapMarkerActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/capacity_label"
            android:id="@+id/capacity_label"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/capacity_value"
            android:id="@+id/capacity_value"
            android:layout_toEndOf="@+id/capacity_label"
            android:layout_toRightOf="@+id/capacity_label"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price_per_hour_label"
            android:id="@+id/price_per_hour_label"
            android:layout_below="@+id/capacity_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price_per_hour_value"
            android:id="@+id/price_per_hour_value"
            android:layout_toEndOf="@+id/price_per_hour_label"
            android:layout_toRightOf="@+id/price_per_hour_label"
            android:layout_alignTop="@+id/price_per_hour_label"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price_per_day_label"
            android:id="@+id/price_per_day_label"
            android:layout_below="@+id/price_per_hour_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price_per_day_value"
            android:id="@+id/price_per_day_value"
            android:layout_toEndOf="@+id/price_per_day_label"
            android:layout_toRightOf="@+id/price_per_day_label"
            android:layout_alignTop="@+id/price_per_day_label"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Go!  "
            android:background="@color/accent_material_light"
            android:id="@+id/mapGo"
            android:layout_below="@+id/price_per_day_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enquire"
            android:background="#ffffcd47"
            android:id="@+id/enquireButton"
            android:layout_below="@+id/price_per_day_value"
            android:layout_toEndOf="@+id/price_per_day_label"
            android:layout_toRightOf="@+id/price_per_day_label"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>


    </RelativeLayout>

</RelativeLayout>
